--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "aws-amplify": "^6.14.4",
     "he": "^1.2.0",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.511.0",
@@ -28,16 +29,22 @@
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.7.2",
     "@eslint/eslintrc": "^3.0.0",
     "@types/he": "^1.2.3",
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.21",
+    "aws-cdk-lib": "^2.189.1",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.25.4",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.0.0"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
