--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
