--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "aws-amplify": "^6.14.4",
+    "framer-motion": "^12.15.0",
     "he": "^1.2.0",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.511.0",
